--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "deno.enable": true,
   "deno.lint": true,
+  "deno.config": "./deno.jsonc",
+  "deno.unstable": true,
   "[json]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
